client/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto';
}

h1 {
  text-align: center;
  margin-top: 0;
  margin-bottom: .3em;
}
.navbar {
  border-radius: 0px;
}

.date-picker-slider {
  margin-top: 1em;
}

.date-picker-input {
  margin-bottom: 1em;
}

.date-picker-display {
  color: black;
}

.date-picker-display:hover {
  color: black;
  text-decoration: none;
}

.date-picker-form {
  margin-bottom: 2em;
}

form.filter button {
  margin-left: .2em;
}

span.img-loader {
  display: inline-block;
  background-image: url("/ajax-loader.gif");
  height: 1em;
  width: 1em;
}

a.sortable {
  color: black;
  cursor: pointer;
}

.stock-data-panel {
  max-height: 60vh;
  overflow: auto;
}

.transactions-panel {
  max-height: 76vh;
  overflow: auto;
}

a.sortable:hover {
  color: black;
  text-decoration: none;
}

.stock-trade-input {
  margin-bottom: 70px;
}

.transaction-type {
  text-transform: capitalize;
}

th a {
  color: black;
}

th a:hover,
th a:focus {
  color: black;
  text-decoration: none;
}

input[type=range] {
  -webkit-appearance: none;
  width: 100%;
  margin: 4.1px 0;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 4.8px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #d2d2d2;
  border-radius: 1.3px;
  border: 0px solid rgba(1, 1, 1, 0);
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  height: 13px;
  width: 13px;
  border-radius: 50px;
  background: #2196f3;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -4.1px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #d2d2d2;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 4.8px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #d2d2d2;
  border-radius: 1.3px;
  border: 0px solid rgba(1, 1, 1, 0);
}
input[type=range]::-moz-range-thumb {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  height: 13px;
  width: 13px;
  border-radius: 50px;
  background: #2196f3;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 4.8px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #d2d2d2;
  border: 0px solid rgba(1, 1, 1, 0);
  border-radius: 2.6px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type=range]::-ms-fill-upper {
  background: #d2d2d2;
  border: 0px solid rgba(1, 1, 1, 0);
  border-radius: 2.6px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type=range]::-ms-thumb {
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  height: 13px;
  width: 1px;
  border-radius: 50px;
  background: #2196f3;
  cursor: pointer;
  height: 4.8px;
}
input[type=range]:focus::-ms-fill-lower {
  background: #d2d2d2;
}
input[type=range]:focus::-ms-fill-upper {
  background: #d2d2d2;
}

